# mouna

./: .gitignore  Makefile  README.md  TESTING.md  databricks.yml  pyproject.toml  requirements-silver.txt  requirements-train.txt
configs/: dev.yaml  prod.yaml
configs/schemas/: gemini_clip_schema.json
notebooks/: 01_bronze_ingest.py
notebooks/databricks/: 01_setup_environment.py  02_bronze_ingest.py  03_silver_preprocessing.py  04_train_baseline.py
scripts/: run_databricks_pipeline.sh  test_e2e_mini.py  test_setup.py  test_single_video.py
src/mouna/: __init__.py
src/mouna/data/: __init__.py  dataset.py  ingestion.py  preprocessing.py
src/mouna/evaluation/: __init__.py  metrics.py
src/mouna/gemini/: __init__.py  qa_layer.py
src/mouna/models/: __init__.py  baseline.py  fusion.py  multimodal.py
src/mouna/utils/: __init__.py  config.py  logging.py
tests/: __init__.py  test_config.py
